# tree-like-menu

./: README.md  pyproject.toml
TreeMenu/: Makefile  env.sample
TreeMenu/config/: settings.py  urls.py
TreeMenu/menu_items/: apps.py  models.py  urls.py  views.py
TreeMenu/menu_items/migrations/: 0001_initial.py  0002_menuitem_delete_munuitem.py  0003_alter_menuitem_posting_link.py  0004_alter_menuitem_posting_link.py  0005_alter_menuitem_posting_link.py
TreeMenu/menu_items/templates/menu_items/: index.html
TreeMenu/menu_items/templatetags/: menu_item_tag.py
